syntax = "proto3";

option csharp_namespace = "CrudClient.Grpc.Order";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package order;

service OrderService{
	rpc GetOrder(GetOrderRequest)returns(OrderReply);
	rpc GetListOrders(google.protobuf.Empty)returns(ListOrderRiply);
	rpc CreateOrder(CreateOrderRequest)returns(OrderReply);
	rpc UpdateOrder(UpdateOrderRequest)returns(OrderReply);
	rpc DeleteOrder(DeleteOrderRequest)returns(google.protobuf.BoolValue);
}

message GetOrderRequest{
	int32 id = 1;
}
message CreateOrderRequest{
	ProviderReply provider = 1;
	string number = 2;
	google.protobuf.Timestamp Date = 3;
}
message UpdateOrderRequest{
	int32 id = 1;
	ProviderReply provider = 2;
	string number = 3;
	google.protobuf.Timestamp Date = 4;
}
message DeleteOrderRequest{
	int32 id = 1;
}
message OrderReply{
	int32 id = 1;
	ProviderReply provider = 2;
	string number = 3;
	google.protobuf.Timestamp Date = 4;

}
message ListOrderRiply{
	repeated OrderReply orders = 1;
}

message ProviderReply{
	int32 id = 1;
	int32 providerId =2; 
}