syntax= "proto3";

option csharp_namespace = "CrudClient.Grpc.ProviderService";

import "google/protobuf/empty.proto";

package provider;

service ProviderService{
	rpc GetListProviders(google.protobuf.Empty)returns(ListProviderReply);
}

message ProviderReply{
	int32 id = 1;
	string name = 2;
}
message ListProviderReply{
	repeated ProviderReply provider = 1;
}